--- a/src/app/locales/pl/global.json
+++ b/src/app/locales/pl/global.json
@@ -19,5 +19,14 @@
   "action": {
     "confirm": "Potwierdź",
     "cancel": "Anuluj"
+  },
+  "languages": {
+    "polish": "Polski",
+    "english": "English"
+  },
+  "fontSize": {
+    "default": "Domyślna (100%)",
+    "larger": "Duża (115%)",
+    "veryLarge": "Bardzo duża (130%)"
   }
 }
