--- a/src/app/locales/en/global.json
+++ b/src/app/locales/en/global.json
@@ -3,7 +3,8 @@
   "navigation": {
     "home": "Home",
     "fontSize": "Font size",
-    "changeLanguage": "Change language"
+    "changeLanguage": "Change language",
+    "menu": "Menu"
   },
   "tooltip": {
     "navigation": {
